--- a/src/styles/sass/base/_page.scss
+++ b/src/styles/sass/base/_page.scss
@@ -14,6 +14,13 @@
 	// MSIE: Prevents scrollbar from overlapping content.
 		body {
 			-ms-overflow-style: scrollbar;
+			max-width: 100%;
+			overflow-x: hidden;
+		}
+
+		html {
+			max-width: 100%;
+			overflow-x: hidden;
 		}
 
 	// Ensures page width is always >=320px.
