--- a/src/styles/sass/components/_posts.scss
+++ b/src/styles/sass/components/_posts.scss
@@ -126,38 +126,13 @@
 		@include breakpoint('<=small') {
 			$gutter: _size(gutter) * 1.5;
 
-			margin: 0 0 _size(element-margin) ($gutter * -1);
-			width: calc(100% + #{$gutter});
-
-			article {
-				margin: 0 0 $gutter $gutter;
-				width: calc(50% - #{$gutter});
-
-				&:before {
-					height: calc(100% + #{$gutter});
-					left: ($gutter * -0.5);
-				}
-
-				&:after {
-					bottom: ($gutter * -0.5);
-					width: calc(100% + #{$gutter});
-				}
-
-				&:nth-last-child(3) {
-					margin-bottom: $gutter;
-				}
-			}
-		}
-
-		@include breakpoint('<=xsmall') {
-			$gutter: _size(gutter) * 1.5;
-
 			margin: 0 0 _size(element-margin) 0;
 			width: 100%;
 
 			article {
 				margin: 0 0 $gutter 0;
 				width: 100%;
+				min-width: 0;
 
 				&:before {
 					display: none;
@@ -165,6 +140,7 @@
 
 				&:after {
 					width: 100%;
+					bottom: ($gutter * -0.5);
 				}
 
 				&:last-child {
@@ -173,6 +149,11 @@
 					&:after {
 						display: none;
 					}
+				}
+
+				.image img {
+					max-width: 100%;
+					height: auto;
 				}
 			}
 		}
